Extract description tab controller