@@ -33,9 +33,9 @@ import mediathek.gui.dialog.DialogBeendenZeit;
 import mediathek.gui.dialog.edit_download.DialogEditDownload;
 import mediathek.gui.messages.*;
 import mediathek.gui.tabs.AGuiTabPanel;
+import mediathek.gui.tabs.DescriptionTabController;
 import mediathek.gui.tabs.actions.MarkFilmAsSeenAction;
 import mediathek.gui.tabs.actions.MarkFilmAsUnseenAction;
-import mediathek.gui.tabs.tab_film.FilmDescriptionPanel;
 import mediathek.mainwindow.MediathekGui;
 import mediathek.tool.*;
 import mediathek.tool.cellrenderer.CellRendererDownloads;
@@ -105,6 +105,7 @@ public class GuiDownloads extends AGuiTabPanel {
     private final AtomicLong _lastUpdate = new AtomicLong(0);
     private final JCheckBoxMenuItem cbShowDownloadDescription = new JCheckBoxMenuItem("Filmbeschreibung anzeigen");
     private final Configuration config = ApplicationConfiguration.getConfiguration();
+    private final DescriptionTabController descriptionTabController = new DescriptionTabController();
     private final MarkFilmAsSeenAction markFilmAsSeenAction = new MarkFilmAsSeenAction(this::getSelFilme);
     private final MarkFilmAsUnseenAction markFilmAsUnseenAction = new MarkFilmAsUnseenAction(this::getSelFilme);
     private final DownloadsFilterController filterController =
@@ -125,14 +126,17 @@ public class GuiDownloads extends AGuiTabPanel {
         super();
         daten = aDaten;
         this.mediathekGui = mediathekGui;
-        descriptionPanel = new FilmDescriptionPanel();
-
 
         initComponents();
 
         setupDownloadListTable();
 
-        setupDescriptionTab(tabelle, cbShowDownloadDescription, ApplicationConfiguration.DOWNLOAD_SHOW_DESCRIPTION, this::getCurrentlySelectedFilm);
+        setupShowFilmDescriptionMenuItem();
+        descriptionTabController.install(
+                tabelle,
+                cbShowDownloadDescription,
+                ApplicationConfiguration.DOWNLOAD_SHOW_DESCRIPTION,
+                this::getCurrentlySelectedFilm);
 
         init();
 
@@ -390,17 +394,11 @@ public class GuiDownloads extends AGuiTabPanel {
         });
     }
 
-    /**
-     * Setup and show film description panel.
-     * Most of the setup is done in {@link GuiDownloads} function.
-     * Here we just display the panel
-     */
-    @Override
-    protected void setupShowFilmDescriptionMenuItem() {
+    private void setupShowFilmDescriptionMenuItem() {
         cbShowDownloadDescription.setSelected(ApplicationConfiguration.getConfiguration().getBoolean(ApplicationConfiguration.DOWNLOAD_SHOW_DESCRIPTION, true));
         cbShowDownloadDescription.addActionListener(_ -> {
             boolean visible = cbShowDownloadDescription.isSelected();
-            makeDescriptionTabVisible(visible);
+            descriptionTabController.setVisible(visible);
             config.setProperty(ApplicationConfiguration.DOWNLOAD_SHOW_DESCRIPTION, visible);
         });
     }
@@ -619,7 +617,7 @@ public class GuiDownloads extends AGuiTabPanel {
             return;
         }
 
-        int validRow = Math.max(0, Math.min(rowToSelect, rowCount - 1));
+        int validRow = Math.clamp(rowToSelect, 0, rowCount - 1);
         tabelle.setRowSelectionInterval(validRow, validRow);
     }
 
@@ -851,7 +849,7 @@ public class GuiDownloads extends AGuiTabPanel {
         tempPanel.add(downloadListScrollPane, BorderLayout.CENTER);
         tempPanel.add(statusBar, BorderLayout.SOUTH);
         downloadListArea.add(tempPanel, BorderLayout.CENTER);
-        downloadListArea.add(descriptionTab, BorderLayout.SOUTH);
+        downloadListArea.add(descriptionTabController.getTabbedPane(), BorderLayout.SOUTH);
 
         add(downloadListArea, BorderLayout.CENTER);
         add(toolBarRow, BorderLayout.NORTH);
